--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -1,6 +1,5 @@
-<mat-tree
-  [dataSource]="dataSource"
-  [treeControl]="treeControl"
+<mat-tree #tree
+  [dataSource]="dataSource"  
   class="example-tree"
   >
   <!-- This is the tree node template for leaf nodes -->
@@ -10,7 +9,7 @@
     @if (!node?.finanicalElementExts) {
       <div>{{ node.name }}</div>
     }
-    @if (node.isOpen) {
+    @if (tree.isExpanded(node)) {
       <mat-table
         [dataSource]="node.finanicalElementExts"
         class="mytable"
@@ -71,12 +70,11 @@
               <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
                 <div class="mat-tree-node">
                   <button
-                    mat-icon-button
-                    (click)="toggleNode(node)"
+                    mat-icon-button                    
                     [attr.aria-label]="'Toggle ' + node.name"
                     >
                     <mat-icon class="mat-icon-rtl-mirror">
-                      {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
+                      {{ tree.isExpanded(node) ? "expand_more" : "chevron_right" }}
                     </mat-icon>
                   </button>
                   {{ node.name }}
@@ -84,7 +82,7 @@
                 <!-- There is inline padding applied to this div using styles.
                 This padding value depends on the mat-icon-button width.  -->
                 <div
-                  [class.example-tree-invisible]="!treeControl.isExpanded(node)"
+                  [class.example-tree-invisible]="!tree.isExpanded(node)"
                   role="group"
                   >
                   <ng-container matTreeNodeOutlet></ng-container>
